# virtual-voice-agent

./: .env.example  .firebaserc  .gitignore  README.md  codex-plan.md  firestore.indexes.json  firestore.rules  integrations_plan.md  phase2-plan.md  preview-ui.html
.claude/: settings.local.json
.github/workflows/: google-cloudrun-docker.yml
agent/: .env.example  Dockerfile  pyproject.toml
agent/nexus/: __init__.py  agent.py  auth.py  background_tasks.py  beta_access.py  billing.py  config.py  credentialed_gemini.py  crypto.py  firebase.py  history_repository.py  models.py  orchestrator.py  runtime_config.py  sandbox.py  server.py  session.py  usage.py  vision.py  voice.py  ws_handler.py
agent/nexus/agents/: __init__.py  orchestrator_agent.py  sub_agents.py
agent/nexus/prompts/: system.py
agent/nexus/tools/: __init__.py  _context.py  bash.py  bg_task.py  browser.py  computer.py  screen.py  ui_control.py  web.py  workspace.py
agent/scripts/: manage_beta.py  test_agent.py  test_sandbox.py
agent/tests/: test_agent_routing.py  test_beta_server.py  test_runtime_config_models.py  test_task_model_fallback.py  test_workspace_tools.py
deploy/: docker-compose.yml
deploy/gcp/: deploy.sh  setup-secrets.sh
docs/: ARCHITECTURE.md
frontend/: .env.example  .gcloudignore  cloudbuild.yaml  next.config.ts  package-lock.json  package.json  proxy.ts
frontend/public/: pcm-worklet.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: activity-feed.tsx  agent-workflow-panel.tsx  app-shell.tsx  chat-markdown.tsx  context-packet-panel.tsx  (+21 more)
(+30 files in other folders)
